--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/three": "^0.136.0",
     "formik": "^2.4.6",
+    "mind-ar": "^1.2.5",
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
