--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
