--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "openvidu-browser": "2.30.0"
   },
   "devDependencies": {
     "@types/node": "^20",
