--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "formik": "^2.4.6",
     "mind-ar": "^1.2.5",
     "next": "^14.2.4",
+    "next-cookies": "^2.0.3",
+    "openvidu-browser": "^2.30.1",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
