--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "openvidu-browser": "2.30.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
