--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.2.1",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "browser-image-compression":"latest"
   },
   "devDependencies": {
     "@types/node": "^20",
