--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/three": "^0.136.0",
     "axios": "^1.7.2",
+    "browser-image-compression": "latest",
     "formik": "^2.4.6",
     "mind-ar": "^1.2.5",
     "next": "^14.2.4",
@@ -18,15 +19,16 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5",
-    "yup": "^1.4.0",
-    "browser-image-compression":"latest"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll-to-bottom": "^4.2.5",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "autoprefixer": "^10.4.19",
