--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@types/three": "^0.136.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
+    "browser-image-compression": "latest",
     "formik": "^2.4.6",
     "mind-ar": "^1.2.5",
     "next": "^14.2.4",
@@ -20,8 +22,7 @@
     "react-icons": "^5.2.1",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5",
-    "yup": "^1.4.0",
-    "browser-image-compression":"latest"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
